--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
   <div class="container">
     <div class="align-center mbr-p-1">
       <p class="mbr-text mbr-white mbr-fonts-style display-7">
-        © Copyright 2021 Ahmad Oriza - All Rights Reserved
+        © Copyright 2024 Jihadan Beckhianosyuhada - All Rights Reserved
       </p>
     </div>
   </div>
